<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/postStatistics"
        app:titleTextColor="@color/toolbarTextColor" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/silverColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_view"
                    android:drawablePadding="6dp"
                    android:text="@string/views"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/views_count_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingTop="6dp"
                android:paddingEnd="24dp"
                android:paddingBottom="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_heart"
                        android:drawablePadding="6dp"
                        android:text="@string/likes"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/likes_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:textColor="@color/blackColor"
                        android:textSize="18sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/like_user_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingTop="6dp"
                android:paddingEnd="24dp"
                android:paddingBottom="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_comments"
                        android:drawablePadding="6dp"
                        android:text="@string/commentators"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/comments_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:textColor="@color/blackColor"
                        android:textSize="18sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/comments_user_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingTop="6dp"
                android:paddingEnd="24dp"
                android:paddingBottom="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_mentions"
                        android:drawablePadding="6dp"
                        android:text="@string/mentions"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/mentions_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:textColor="@color/blackColor"
                        android:textSize="18sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mentions_user_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingTop="6dp"
                android:paddingEnd="24dp"
                android:paddingBottom="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_repost"
                        android:drawablePadding="6dp"
                        android:text="@string/reposts"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/reposts_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:textColor="@color/blackColor"
                        android:textSize="18sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reposts_user_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/layout_bg"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_bookmarks"
                    android:drawablePadding="6dp"
                    android:text="@string/bookmarks"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/bookmarks_count_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="@color/blackColor"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>